--- a/frontweb/public/index.html
+++ b/frontweb/public/index.html
@@ -2,14 +2,14 @@
 <html lang="pt_BR">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/car-icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
       content="Projeto desenvolvido no bootcamp ReactJS DevSuperior"
     />
 
-    <title>CarTop</title>
+    <title>Car Top</title>
   </head>
   <body>
     <noscript>Você precisa habilitar JavaScript no seu navegador.</noscript>
